Implementation of adding rule in the TableView.